--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Bai hoc dau tien ve Git-Hub</h1>
+    <h2>Da thay doi lan thu 1</h2>
+    <h2>Da thay doi lan thu 2</h2>
     
 </body>
 </html>
